# voice-reactions

./: Cargo.toml  README.md  build.rs  crossbuild_osx.sh  crossbuild_windows.sh
src/: main.rs
