[package]
name = "voice-reactions"
version = "0.1.0"
authors = ["ngasull <blint6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.26"
sdl2 = "^0.32.2"

[dependencies.ffmpeg]
version = "^0.2.0-alpha"
default-features = false
features = ["codec", "format", "software-resampling", "software-scaling"]
